# Smart-Code-Reviewer

./: .dockerignore  Dockerfile  README.md  app.py  fly.toml  index.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: app.py  index.py
smart_code_reviewer/: __init__.py  __main__.py  analyzer.py  app.py  cli.py  formatters.py  report.py  review.py
smart_code_reviewer/templates/: index.html
