[project]
name = "smart-code-reviewer"
version = "0.1.0"
description = "Review code for readability, structure, and maintainability"
requires-python = ">=3.10"
dependencies = [
    "radon>=6.0.1",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
app = "app:app"
